tests/e2e/semantics/error_message_inliner2.story
a = {"a": "b"}
b = a[(myService call) + true]
